# simple_http_and_tcp_server_cpp

./: CMakeLists.txt  admin.cpp  client.cpp  http_server.cpp  server.cpp
templates/: home.html  index.html
templates/scripts/: home_script.js  index_script.js  index_scropt.js  theme.js
templates/styles/: home_style.css  index_style.css
